--- a/templates/add_user_info.html
+++ b/templates/add_user_info.html
@@ -5,12 +5,13 @@
 {% endblock %}
 
 {% block main %}
+<div style="width:100%;text-align:center">
     <form action="{{ url_for('add_user_info') }}" method="post">
         <fieldset>
 
             <div class="form-group">
                 <label>UserName    </label>
-                <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text"/>
+                <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" />
             </div>
             <div class="form-group">
                 <label>Password    </label>
@@ -24,19 +25,19 @@
 
             <div class="form-group">
                 <label>FullName    </label>
-                <input class="form-control" name="fullname" placeholder="fullname" type="text"/>
+                <input class="form-control" name="fullname" placeholder="fullname" />
             </div>
 
 
             <div class="form-group">
                 <label>PhoneNumber</label>
-                <input class="form-control" name="phonenumber" placeholder="phonenumber" type="text"/>
+                <input class="form-control" name="phonenumber" placeholder="phonenumber" />
             </div>
 
 
             <div class="form-group">
                 <label>FacebookLink</label>
-                <input class="form-control" name="facebooklink" placeholder="facebooklink" type="text"/>
+                <input class="form-control" name="facebooklink" placeholder="facebooklink"/>
             </div>
 
 
@@ -46,4 +47,5 @@
             </div>
         </fieldset>
     </form>
+</div>
 {% endblock %}
