--- a/templates/friends_list.html
+++ b/templates/friends_list.html
@@ -1,11 +1,130 @@
-{% extends "layout.html" %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>数据表格页面</title>
+<link rel="stylesheet" href="css/style.default.css" type="text/css" />
+<script type="text/javascript" src="js/plugins/jquery-1.7.min.js"></script>
+<script type="text/javascript" src="js/plugins/jquery-ui-1.8.16.custom.min.js"></script>
+<script type="text/javascript" src="js/plugins/jquery.cookie.js"></script>
+<script type="text/javascript" src="js/plugins/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="js/plugins/jquery.uniform.min.js"></script>
+<script type="text/javascript" src="js/custom/general.js"></script>
+<script type="text/javascript" src="js/custom/tables.js"></script>
 
-{% block title %}
-MY FRIENDS
-{% endblock %}
 
-{% block main %}
 
+<link href='http://fonts.googleapis.com/css?family=Lato:400,300,700,400italic,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="assets/css/flexslider.css">
+<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+<link rel="stylesheet" type="text/css" href="assets/css/fractionslider.css">
+<link rel="stylesheet" href="assets/css/main.css">
+
+
+
+</head>
+
+
+
+<body class="withvernav">
+<header>
+  <nav id="sticktop" class="navbar navbar-default">
+        <div class="container">
+            <div class="collapse navbar-collapse" id="navbar">
+
+                <ul class="nav navbar-nav">
+
+                  <li><a href="http://47.91.40.70:8088/dashboard">DashBoard</a></li>
+
+                  <li class="dropdown active"><a>SERVICE <i class="icon-caret-down"></i></a>
+                      <ul class="dropdown-menu">
+                      <li><a class="scrollto" href="#services">SERVICE</a></li>
+                      <li><a href="http://47.91.40.70:8088/quote">QUOTE</a></li>
+                      <li><a href="http://47.91.40.70:8088/sell">SELL</a></li>
+                      <li><a href="http://47.91.40.70:8088/buy">BUY</a></li>
+                      </ul>
+                 </li>
+
+
+                  <li class="dropdown active"><a>LEADERBOARD<i class="icon-caret-down"></i></a>
+                      <ul class="dropdown-menu">
+                       <li><a href="http://47.91.40.70:8088/leaderboard">Leaderboard</a></li>
+                       <li><a href="http://47.91.40.70:8088/friends_list">My Friends</a></li>
+                      </ul>
+                  </li>
+
+                  <li class="dropdown active"><a>HISTORY&CURRENT<i class="icon-caret-down"></i></a>
+                      <ul class="dropdown-menu">
+                      <li><a class="scrollto" href="http://47.91.40.70:8088/history">HISTORY</a></li>
+                      <li><a href="http://47.91.40.70:8088/current">CURRENT</a></li>
+                      </ul>
+                 </li>
+
+                  <li class="dropdown active"><a>PROFILE<i class="icon-caret-down"></i></a>
+                      <ul class="dropdown-menu">
+                      <li><a href="http://47.91.40.70:8088/profile">Profile</a></li>
+                      <li><a href="http://47.91.40.70:8088/price">Price</a></li>
+                      </ul>
+                 </li>
+
+                  <li><a href="http://47.91.40.70:8088/message_list">Message</a></li>
+                  <li><a href="http://47.91.40.70:8088/logout">Log Out</a></li>
+
+                </ul>
+            </div>
+       </div>
+    </nav>
+ </header>
+
+
+
+<div class="bodywrapper">
+    <div class="topheader">
+        <div class="right">
+                <!--<div class="notification">
+                                    <a class="count" href="notifications.html"><span>9</span></a>
+                </div>
+                        -->
+            <div class="userinfo">
+                <img src="images/thumbs/avatar.png" alt="" />
+                <span>Juan Dela Cruz</span>
+            </div><!--userinfo-->
+
+            <div class="userinfodrop">                  <div class="avatar">
+                        <a href=""><img src="images/thumbs/avatarbig.png" alt="" /></a>
+                    <div class="changetheme">
+                        Change theme: <br />
+                        <a class="default"></a>
+                        <a class="blueline"></a>
+                        <a class="greenline"></a>
+                        <a class="contrast"></a>
+                        <a class="custombg"></a>
+                    </div>
+                </div><!--avatar-->
+<div class="userdata">
+                        <h4>Juan Dela Cruz</h4>
+                    <span class="email">youremail@yourdomain.com</span>
+                    <ul>
+                        <li><a href="editprofile.html">Edit Profile</a></li>
+                        <li><a href="accountsettings.html">Account Settings</a></li>
+                        <li><a href="help.html">Help</a></li>
+                        <li><a href="index.html">Sign Out</a></li>
+                    </ul>
+                </div><!--userdata-->
+            </div><!--userinfodrop-->
+        </div><!--right-->
+    </div><!--topheader-->
+
+
+
+      <div class="centercontent tables">
+
+        <div class="pageheader notab">
+            <h1 class="pagetitle">Tables</h1>
+        </div><!--pageheader-->
 
 
 
@@ -16,7 +135,8 @@ MY FRIENDS
 </div><!--contenttitle-->
 
 
-<table cellpadding="0" cellspacing="0" border="0" class="stdtable stdtablequick">
+
+<table cellpadding="0" cellspacing="0" border="0" class="stdtable" id="dyntable">
 
                     <colgroup>
                         <col class="con0" />
@@ -25,6 +145,7 @@ MY FRIENDS
                         <col class="con1" />
                         <col class="con0" />
                         <col class="con1" />
+                        <col class="con0" />
                     </colgroup>
 
                     <thead>
@@ -34,6 +155,7 @@ MY FRIENDS
                             <th class="head0">Assets</th>
                             <th class="head1">Net Worth</th>
                             <th class="head0">Add Friend</th>
+                            <th class="head0">Transfer Account</th>
                             <th class="head1">Send Message</th>
 
                            {% if current_username == "administrator" %}
@@ -63,6 +185,9 @@ MY FRIENDS
         <td><a href="{{ url_for('like') }}?like_id={{ user[3] }}&from_id={{ current_userid }}">{{ user[0] }}</a></td>
 
 
+        <td><a href="{{ url_for('transfer_account') }}?to_id={{ user[3] }}&from_id={{ current_userid }}">Transfer Account</a></td>
+
+
         <td><a href="{{ url_for('send_message') }}?to_id={{ user[3] }}&from_id={{ current_userid }}">Send a Message</a></td>
 
 
@@ -77,4 +202,10 @@ MY FRIENDS
     {% endfor %}
   </tbody>
 </table>
-{% endblock %}
+          <br />
+          <br />
+        </div>
+        </div>
+</div>
+</body>
+</html>
