--- a/templates/history_others.html
+++ b/templates/history_others.html
@@ -6,7 +6,7 @@ History
 
 {% block main %}
 
-
+<div style="width:100%;text-align:center">
 <form action="{{ url_for('history') }}" method="post">
 
     <fieldset>
@@ -28,6 +28,7 @@ History
         </div>
     </fieldset>
 </form>
+</div>
 
 
 
