--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,12 +6,43 @@
     <meta charset="utf-8"/>
     <meta content="initial-scale=1, width=device-width" name="viewport"/>
 
+    <meta name="description" content="">
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta name="viewport" content="minimum-scale=1.0, width=device-width, maximum-scale=1, user-scalable=no" />
+
+
+<script src="assets/js/jquery-1.9.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.easing-1.3.pack.js"></script>
+<script src="assets/js/jquery.nicescroll.min.js"></script>
+<script src="assets/js/jquery.sticky.js"></script>
+<script src="assets/js/jquery.inview.js"></script>
+<script src="assets/js/jquery.flexslider-min.js"></script>
+<script src="assets/js/packery.pkgd.min.js"></script>
+<script src="assets/js/isotope.js"></script>
+<script src="assets/js/jquery.carouFredSel-6.2.1-packed.js"></script>
+<script src="assets/js/jquery.fractionslider.min.js"></script>
+<script src="assets/js/main.js"></script>
+
+
+
+
+<link rel="stylesheet" href="css/style.default.css" type="text/css" />
+<script type="text/javascript" src="js/plugins/jquery-1.7.min.js"></script>
+<script type="text/javascript" src="js/plugins/jquery-ui-1.8.16.custom.min.js"></script>
+<script type="text/javascript" src="js/plugins/jquery.cookie.js"></script>
+<script type="text/javascript" src="js/plugins/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="js/plugins/jquery.uniform.min.js"></script>
+<script type="text/javascript" src="js/custom/general.js"></script>
+<script type="text/javascript" src="js/custom/tables.js"></script>
+
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-
     <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet"/>
-
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+
+    <script src="assets/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
 
   <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
@@ -20,80 +51,213 @@
   <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
 
 
+<link href='http://fonts.googleapis.com/css?family=Lato:400,300,700,400italic,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="assets/css/flexslider.css">
+<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+<link rel="stylesheet" type="text/css" href="assets/css/fractionslider.css">
+<link rel="stylesheet" href="assets/css/main.css">
 
     <title>Stock Market: {% block title %}{% endblock %}</title>
+
+
 
 
  <script>
    $(document).ready(function() {  
     $( "#Transaction_StartTime" ).datepicker();
     $( "#Transaction_EndTime" ).datepicker();
-  });
+  })
+ </script>
+
+<script>
+$(document).ready(function() {
+    $("#symbol").autocomplete({
+        source:function(request, response) {
+            $.getJSON("{{url_for('autocomplete')}}",{
+                q: request.term, // in flask, "q" will be the argument to look for using request.args
+            }, function(data) {
+                response(data.matching_results); // matching_results from jsonify
+            });
+        },
+        minLength: 1,
+        select: function(event, ui) {
+            console.log(ui.item.value); // not in your question, but might help later
+        }
+    });
+})
+</script>
+
+<script>
+$(document).ready(function() {
+    $("#symbol1").autocomplete({
+        source:function(request, response) {
+            $.getJSON("{{url_for('autocomplete1')}}",{
+                q: request.term, // in flask, "q" will be the argument to look for using request.args
+            }, function(data) {
+                response(data.matching_results); // matching_results from jsonify
+            });
+        },
+        minLength: 1,
+        select: function(event, ui) {
+            console.log(ui.item.value); // not in your question, but might help later
+        }
+    });
+})
+</script>
+
+<script>
+$(document).ready(function() {
+
+    $("[name='symbol']").autocomplete({
+        source:function(request, response) {
+            $.getJSON("{{url_for('autocomplete')}}",{
+                q: request.term, // in flask, "q" will be the argument to look for using request.args
+            }, function(data) {
+                response(data.matching_results); // matching_results from jsonify
+            });
+        },
+        minLength: 1,
+        select: function(event, ui) {
+            console.log(ui.item.value); // not in your question, but might help later
+        }
+    });
+})
+</script>
 
 
-  </script>
+<script>
+
+var temp_count=0;
+
+setInterval(function() { 
+    $.ajax({  
+               type: "GET",  
+               url: "http://47.91.40.70:8088/unreadnews_count",  
+               dataType: "json",  
+               success: function(data) {  
+                   if(data.count!=temp_count)
+                   {
+                      alert("You have "+data.count+" Message Unread!!!");  
+                      temp_count=data.count;
+                   }
+                   else
+                   {
+                      temp_count=data.count;
+                   }
+	
+                       
+               }  
+           });
+}, 5000);
+
+</script>
 
 </head>
 
 
-<body>
-<div class="container">
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar"
-                        data-toggle="collapse" type="button">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
 
-                <a class="navbar-brand" href="{{ url_for('index') }}">
-                </a>
+<body data-spy="scroll" data-target="#sticktop" data-offset="70">
 
-            </div>
+
+<header>
+  <nav id="sticktop" class="navbar navbar-default">
+
+        <div class="container">
+
             <div class="collapse navbar-collapse" id="navbar">
-                {% if session.user_id %}
 
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('quote') }}">Quote</a></li>
-                    <li><a href="{{ url_for('sell') }}">Sell</a></li>
-                    <li><a href="{{ url_for('buy') }}">Buy</a></li>
-                    <li><a href="{{ url_for('leaderboard') }}">Leaderboard</a></li>
-                    <li><a href="{{ url_for('history') }}">History</a></li>
-                    <li><a href="{{ url_for('profile') }}">Profile</a></li>
+                {% if session.user_id %}
 
-                    <li><a href="{{ url_for('user_info_list') }}">Users Manage</a></li>
-                </ul>
+                  <li><a href="{{ url_for('dashboard') }}">DashBoard</a></li>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                </ul>
+                  <li class="dropdown active"><a>SERVICE <i class="icon-caret-down"></i></a>
+                      <ul class="dropdown-menu">
+                      <li><a class="scrollto" href="#services">SERVICE</a></li>
+                      <li><a href="{{ url_for('quote') }}">QUOTE</a></li>
+                      <li><a href="{{ url_for('sell') }}">SELL</a></li>
+                      <li><a href="{{ url_for('buy') }}">BUY</a></li>
+                      </ul>
+                 </li>
+
+
+                  <li class="dropdown active"><a>LEADERBOARD<i class="icon-caret-down"></i></a>
+                      <ul class="dropdown-menu">
+                       <li><a href="{{ url_for('leaderboard') }}">Leaderboard</a></li>
+                       <li><a href="{{ url_for('friends_list') }}">My Friends</a></li>
+
+                       {% if session.user_id==22 %}
+                       <li><a href="{{ url_for('user_info_list') }}">Users Manage</a></li>
+                       {% endif %}
+
+ 
+                      </ul>
+                  </li>
+
+                  <li class="dropdown active"><a>HISTORY&CURRENT<i class="icon-caret-down"></i></a>
+                      <ul class="dropdown-menu">
+                      <li><a class="scrollto" href="{{ url_for('history') }}">HISTORY</a></li>
+                      <li><a href="{{ url_for('current') }}">CURRENT</a></li>
+                      </ul>
+                 </li>
+
+                  <li class="dropdown active"><a>PROFILE<i class="icon-caret-down"></i></a>
+                      <ul class="dropdown-menu">
+
+                      <li><a href="{{ url_for('profile') }}">Profile</a></li>
+                      <li><a href="{{ url_for('price') }}">Price</a></li>
+
+                      </ul>
+                 </li>
+
+
+
+                  <li><a href="{{ url_for('message_list') }}">Message</a></li>
+
+                  <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+
                 {% else %}
-                <ul class="nav navbar-nav navbar-right">
+                    <!--<li><a href="{{ url_for('message_list') }}">Message Box( unread : {{ unread_message_count}} total: {all_message_count }} )</a></li>-->
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                     <li><a href="{{ url_for('logout') }}">Log In</a></li>
-                </ul>
                 {% endif %}
-            </div>
-        </div>
-    </nav>
 
-    {% if get_flashed_messages() %}
+                </ul>
+            </div>
+       </div>
+    </nav>
+ </header>
+
+  <!--{% if get_flashed_messages() %}
     <header>
         <div class="alert alert-info" role="alert">
             {{ get_flashed_messages() | join(" ") }}
         </div>
     </header>
-    {% endif %}
+    {% endif %}-->
 
     <main>
         {% block main %}{% endblock %}
     </main>
 
-</div>
+<!--=================================
+Script Source
+=================================-->
+
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.easing-1.3.pack.js"></script>
+<script src="assets/js/jquery.nicescroll.min.js"></script>
+<script src="assets/js/jquery.sticky.js"></script>
+<script src="assets/js/jquery.inview.js"></script>
+<script src="assets/js/jquery.flexslider-min.js"></script>
+<script src="assets/js/packery.pkgd.min.js"></script>
+<script src="assets/js/isotope.js"></script>
+<script src="assets/js/jquery.carouFredSel-6.2.1-packed.js"></script>
+<script src="assets/js/jquery.fractionslider.min.js"></script>
+<script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
+
