--- a/templates/login.html
+++ b/templates/login.html
@@ -5,11 +5,25 @@
 {% endblock %}
 
 {% block main %}
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+
+
+
+<div style="width:100%;text-align:center">
     <form action="{{ url_for('login') }}" method="post">
         <fieldset>
 
             <div class="form-group">
-                <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text"/>
+                <input  class="form-control" name="username" placeholder="Username"/>
             </div>
 
             <div class="form-group">
@@ -21,4 +35,5 @@
             </div>
         </fieldset>
     </form>
+</div>
 {% endblock %}
