--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,58 +6,119 @@ Leaderboard
 
 {% block main %}
 
-<table>
-    <tr>
-        <th>Id</th>
-        <th>Username</th>
-        <th>Cash</th>
-        <th>FullName</th>
-        <th>Email</th>
-        <th>Phonenumber</th>
-        <th>FacebookLink</th>
-        <th>Edit</th>
-    </tr>
-
-    <tr>
-        <td> {{ user_info[0] }}</td>
-        <td> {{ user_info[1] }}</td>
-        <td>{{ user_info[2] }}</td>
-        <td>{{ user_info[3] }}</td>
-        <td>{{ user_info[4] }}</td>
-        <td>{{ user_info[5] }}</td>
-        <td>{{ user_info[6] }}</td>
-
-        <td><a href="{{ url_for('modify_user_info') }}?user_id={{ user_info[0] }}">Edit</a></td>
-
-    </tr>
-</table>
-
-<br>
-<br>
-<br>
-<br>
-
-<table>
-    <tr>
-
-        <th>
-           Symbol
-        </th>
-
-        <th>
-           Number 
-        </th>
-
-        <th>
-           Alarm Price
-        </th>
-
-        <th>
-           Alarm
-        </th>
+</br>
+</br>
+</br>
+</br>
+</br>
 
 
-    </tr>
+<div class="bodywrapper">
+
+
+  <div class="centercontent">
+        <div class="pageheader">
+            <h1 class="pagetitle">PROFILE</h1>
+            <span class="pagedesc">PROFILE</span>
+
+            <ul class="hornav">
+                <li class="current"><a href="#basicform">Basic</a></li>
+            </ul>
+        </div>
+
+        <div id="contentwrapper" class="contentwrapper">
+
+                <div id="basicform" class="subcontent">
+                    <div class="contenttitle2">
+                        <h3>Form Style 1</h3>
+                    </div><!--contenttitle-->
+
+                    <form class="stdform" action="" method="post">
+                        <p>
+                            <label>Id</label>
+                            <span class="field"><input type="text" name="input1" class="smallinput" value=" {{ user_info[0]  }}"/></span>
+                        </p>
+
+
+                        <p>
+                            <label>Username</label>
+                            <span class="field"><input type="text" name="input1" class="smallinput" value=" {{ user_info[1] }}"/></span>
+                        </p>
+
+                        <p>
+                            <label>Cash</label>
+                            <span class="field"><input type="text" name="input1" class="smallinput" value=" {{ user_info[2]  }}"/></span>
+                        </p>
+
+                        <p>
+                            <label>FullName</label>
+                            <span class="field"><input type="text" name="input1" class="smallinput" value=" {{ user_info[3] }}"/></span>
+                        </p>
+
+
+                        <p>
+                            <label>Email</label>
+                            <span class="field"><input type="text" name="input1" class="smallinput" value=" {{ user_info[4] }}"/></span>
+                        </p>
+
+
+                        <p>
+                            <label>Phonenumber</label>
+                            <span class="field"><input type="text" name="input1" class="smallinput" value=" {{ user_info[5] }}"/></span>
+                        </p>
+
+                        <p>
+                            <label>FacebookLink</label>
+                            <span class="field"><input type="text" name="input1" class="smallinput" value=" {{  user_info[6]  }}"/></span>
+                        </p>
+
+
+
+                        <!--<p>
+                            <label>Time</label>
+                            <span class="field"><input type="text" name="input2" class="mediuminput" value="{{ time1 }}" /></span>
+                        </p>
+
+
+                        <p>
+                            <label>Title</label>
+                            <span class="field"><textarea cols="80" rows="1" class="longinput" > {{ title1  }}</textarea></span>
+                        </p>
+
+
+                        <p>
+                            <label>Message</label>
+                            <span class="field">
+                            <textarea cols="80" rows="5" id="textarea2" class="longinput"  >  {{ message }}</textarea>
+                            </span>
+                        </p>-->
+
+                 </form>
+            </div>
+
+
+
+	   <div id="validation" class="subcontent" style="display: none">
+
+<table cellpadding="0" cellspacing="0" border="0" class="stdtable stdtablequick">
+                    <colgroup>
+                        <col class="con0" />
+                        <col class="con1" />
+                        <col class="con0" />
+                        <col class="con1" />
+                    </colgroup>
+
+                    <thead>
+                        <tr>
+                           <th class="head0">Symbol</th>
+                           <th class="head1">Number</th>
+                           <th class="head0">Alarm Price</th>
+                           <th class="head1">Alarm</th>
+                        </tr>
+
+                    </thead>
+    <tbody>
+
 
     {% for available in  availables %}
     <tr>
@@ -66,9 +127,15 @@ Leaderboard
         <td><a href="{{ url_for('set_price') }}?price={{ available[2] }}&symbol={{ available[0]}}">{{ available[2] }}</a></td>
 
         <td>{{ available[3] }}</td>
-
     </tr>
-
     {% endfor %}
+  </tbody>
 </table>
+
+            </div><!--subcontent-->
+
+        </div>
+    </div>
+</div>
+
 {% endblock %}
