--- a/templates/quote.html
+++ b/templates/quote.html
@@ -6,33 +6,37 @@
 
 {% block main %}
 
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+<div style="width:100%;text-align:center">
     <form action="{{ url_for('quote') }}" method="post">
         <fieldset>
             <div class="form-group">
-                <input autocomplete="off" autofocus class="form-control" name="stock-symbol" placeholder="Input Stock Symbol" type="text"/>
+                <input autocomplete="on" autofocus class="form-control" name="stock-symbol"  id="symbol"  placeholder="Input Stock Symbol" />
             </div>
             <div class="form-group">
                 <button class="btn btn-default" type="submit">Return Stock Quote</button>
             </div>
         </fieldset>
     </form>
+</div>
 
-
-
+<div style="width:100%;text-align:center">
     <form action="{{ url_for('symbol_search') }}" method="post">
         <fieldset>
             <div class="form-group">
-                <input autocomplete="off" autofocus class="form-control" name="symbol" placeholder="Search Stock Symbol" type="text"/>
+                <input autocomplete="on" autofocus  class="form-control"  name="symbol" id="symbol" name="symbol"  placeholder="Search Stock Symbol" />
             </div>
             <div class="form-group">
                 <button class="btn btn-default" type="submit">Search Stock Symbol</button>
             </div>
         </fieldset>
     </form>
-
-
-
-
-
+</div>
 
 {% endblock %}
