--- a/templates/sell.html
+++ b/templates/sell.html
@@ -5,18 +5,29 @@
 {% endblock %}
 
 {% block main %}
+
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+
+<div style="width:100%;text-align:center">
     <form action="{{ url_for('sell') }}" method="post">
         <h3>Sell your stock</h3>
         <fieldset>
             <div class="form-group">
-                <input autocomplete="off" autofocus class="form-control" name="stock-symbol" placeholder="Stock Symbol" type="text"/>
+                <input autocomplete="on" autofocus class="form-control" name="stock-symbol" id="symbol1" placeholder="Stock Symbol" />
             </div>
             <div class="form-group">
-                <input autocomplete="off" autofocus class="form-control" name="stock-quantity" placeholder="Quantity" type="text"/>
+                <input autocomplete="on" autofocus class="form-control" name="stock-quantity" placeholder="Quantity" />
             </div>
             <div class="form-group">
                 <button class="btn btn-default" type="submit">Sell</button>
             </div>
         </fieldset>
     </form>
+</div>
 {% endblock %}
